--- a/src/client/admin/components/wrapper/templates/signupModal.html
+++ b/src/client/admin/components/wrapper/templates/signupModal.html
@@ -1,17 +1,10 @@
 <md-dialog class="login-modal accept-terms-modal"> 
   <div layout="column" class="login-modal-inner md-whiteframe-z1">
-    <md-toolbar>
-      <img src="https://d3itspfsh9cmg0.cloudfront.net/Conduit_icon-RGB-SM.png" height="50">
-      <i class="material-icons" ng-click="close()">close</i>
-    </md-toolbar>
     <md-content layout="column" class="md-padding">
 
       <h3>Please create a free account</h3>
 
-      <span class="sub-link" ng-click="showLoginModal()">Already have a Conduit account?  Log In</span>
-
-      <br>
-      <br>
+      <span class="sub-link" ng-click="showLoginModal()">Already have an account?  Log In</span>
 
       <form name="acceptForm" ng-submit="acceptForm.$valid && submitSignupForm(data)">
         <div>
@@ -32,17 +25,13 @@
             <input type="password" ng-model="data.confirmPassword" required/>
           </md-input-container>
         </div>
-        <div>
-          <input type="checkbox" required>
-          <label>I have read and agree to the <a href="/legal/terms" target="_blank">Terms of Use</a>, and the <a href="/legal/privacy" target="_blank">Privacy Policy</a>.</label>
-        </div>
-        <p class="form-error-msg" ng-show="showUserExistsMessage">A user with that email address already exists.<br> If you need to change your password, click "Log in" and then "Change Password".</p>
 
-        <div layout="column" layout-align="center right" class="margin-top">
-          <div flex>
-            <md-button type='button' ng-click="close()">Cancel</md-button>
-            <md-button type='submit' class="pink-link">Sign Up</md-button>
-          </div>
+        <p class="form-error-msg" ng-show="showUserExistsMessage">A user with that email address already exists.</p>
+
+        <div layout="row" layout-align="center center">
+          <md-button type='button' class="md-raised md-default" ng-click="close()">Cancel</md-button>
+          <div flex="flex"></div>
+          <md-button type='submit' class="md-raised md-primary">Login</md-button>
         </div>
 
       </form>
