--- a/src/client/admin/components/wrapper/templates/loginModal.html
+++ b/src/client/admin/components/wrapper/templates/loginModal.html
@@ -1,17 +1,12 @@
 <md-dialog class="login-modal"> 
   <div layout="column" class="login-modal-inner md-whiteframe-z1">
-    <md-toolbar>
-      <img src="https://d3itspfsh9cmg0.cloudfront.net/Conduit_icon-RGB-SM.png" height="50">
-      <i class="material-icons" ng-click="close()">close</i>
-    </md-toolbar>
     <md-content layout="column" class="md-padding">
 
         <form ng-submit="login(userCreds)">
-          <h3>Log In</h3>
           <div>
             <md-input-container>
               <label>Email Address</label>
-              <input type="email" ng-model="userCreds.username" required/>
+              <input type="email" ng-model="userCreds.username" class="dialog-close" required/>
             </md-input-container>
           </div>
           <div>
@@ -21,17 +16,11 @@
             </md-input-container>
           </div>
           <p class="form-error-msg" ng-show="loginFailure">Login Failed - Please try again, or reset your password.</p>
-          <div layout="column" layout-align="center right">
-            <div flex>
-              <md-button type='button' ng-click="close()">Cancel</md-button>
-              <md-button type='submit' class="pink-link">Login</md-button>
-            </div>
+          <div layout="row" layout-align="center center">
+            <md-button type='button' class="md-raised md-default" ng-click="close()">Cancel</md-button>
             <div flex="flex"></div>
-            <span class="sub-link" type="button" ng-click="showForgot()" md-no-ink="md-no-ink">
-              Forgot your password?
-            </span>
+            <md-button type='submit' class="md-raised md-primary">Login</md-button>
           </div>
-          <md-progress-circular md-mode="indeterminate" ng-show="loginLoading"></md-progress-circular>
         </form>
 
     </md-content>
