--- a/src/client/admin/components/wrapper/wrapper.scss
+++ b/src/client/admin/components/wrapper/wrapper.scss
@@ -1,60 +1,5 @@
-.browser-alert, .flash-alert {
-  background-color: #E06A26;
-  color: #fff;
-  text-align: center;
-  padding: 25px 0;
-
-  p {
-    margin: 0;
-  }
-
-  a {
-    font-weight: bold;
-    cursor: pointer;
-  }
-}
-
-.flash-alert {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 99;
-
-  i {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #fff;
-  }
-}
-
-.get-the-app-modal {
-  h4 {
-    text-align: center;
-  }
-
-  a {
-    display: block;
-  }
-
-  .mobile {
-    img {
-      max-width: 200px;
-      display: block;
-      margin: auto;
-      margin-bottom: 15px;
-    }
-  }
-
-  .desktop {
-    img {
-      max-width: 80px;
-      display: block;
-      margin: auto;
-      margin-bottom: 15px;
-    }
-  }
+[ng-click] {
+  cursor: pointer;
 }
 
 .nav-link span {
@@ -62,15 +7,6 @@
   text-transform: lowercase;
   font-weight: normal !important;
   font-size: 21px;
-}
-
-.logo-img {
-  max-height: 70px;
-}
-.logo-img-icon {
-  max-height: 60px;
-  width: 60px;
-  height: 60px;
 }
 
 md-toolbar, md-menu-item {
@@ -81,27 +17,18 @@ md-toolbar, md-menu-item {
 }
 
 md-sidenav {
-  a {
-    color: #000;
-    text-align: center;
-    padding: 0 !important;
-    font-size: 12px;
+  p {
+    color: #fff;
   }
 }
 
 md-toolbar {
-  height: 100px;
+  background-color: #fff !important;
 
   md-menu {
     margin-top: 7px !important;
   }
 
-  .pink-link span{
-    font-family: 'Varela Round', sans-serif !important;
-    font-size: 21px;
-    font-weight: normal !important;
-  }
-  
   .md-toolbar-tools {
     flex-flow: row;
     justify-content: flex-start;
@@ -136,6 +63,11 @@ md-toolbar {
     }
     .right-nav {
       margin-right: -20px;
+
+      i {
+        color: #000;
+        float: right;
+      }
       
       @media screen and (max-width: 600px) {
         margin-right: 0;
@@ -162,12 +94,17 @@ md-toolbar {
 
 .login-modal {
 
+  .sub-link {
+    margin-bottom: 20px;
+  }
+
   md-input-container {
     margin: 0;
     width: 100%;
   }
 
   .login-modal-inner {
+    padding-top: 10px;
     min-width: 450px;
     @media screen and (max-width: 600px) {
       min-width: 300px;
@@ -196,19 +133,20 @@ button i {
   max-width: 225px;
   bottom: inherit;
   box-shadow: none;
-  background-color: #97D3BC;
+  background-color: #333333;
 
   md-content {
     background-color: transparent;
 
     i {
+      color: #fff;
       position: absolute;
       right: 0;
       top: 0;
       opacity: 0.5;
 
       &:hover {
-        color: #fff;
+        color: #ccc;
       }
     }
   
@@ -219,121 +157,23 @@ button i {
 
       &:hover {
         cursor: pointer;
-        color: #fff;
-      }
-    }
-
-    md-divider {
-      padding: 0;
-      margin-top: 15px;
-    }
-
-    .bottom-links {
-      padding-top: 17px;
-
-      a {
-        display: block;
-
-        &:hover {
-          color: #fff;
-        }
+        color: #ccc;
       }
     }
   }
 }
 
-.landing-page {
-  text-align: center;
-  
-  div[class ^= "landing-col"]:before {
-    content: '';
-    display: inline-block;
-    padding-top: 100%;
-  }
-  div[class ^= "landing-col"] {
-    
-    text-align: center;
-    
-    .circle {
-      width: 80%;
-      padding-top: 80%;
-      float: left;
-      margin-top: 10%;
-      margin-left: 10%;
-      position: relative;
-    }
-
-  }
-  
-  .landing-col-1 {
-    background-image: url('https://d3itspfsh9cmg0.cloudfront.net/splash_mixtapes.jpg');
-    background-size: cover;
-    
-    .circle {
-      background-color: #aadac9;
-    }
-    
-    .logo {
-      width: 75%;
-      position: absolute;
-      top: 33%;
-      left: 10%;
-    }
-  }
-  .landing-col-2 {
-    background-color: #bc9e2f;
-
-  }
-  .landing-col-3 {
-    background-image: url('https://d3itspfsh9cmg0.cloudfront.net/splash_sparkles.jpg');
-    background-size: cover; 
-    
-    .circle {
-      background-color: #d71389;
-    }
-    
-    h1 {
-      width: 75%;
-      position: absolute;
-      top: 16%;
-      left: 14%;
-      color: white;
-      font-size: 2.5vw
-    }
-  }
+.body-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: url(https://d3itspfsh9cmg0.cloudfront.net/wood-bg.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
-.landing-form {
-  text-align: center;
-}
-
-
-
-@media screen and (max-width: 960px) {
-    
-  .landing-col-3 .circle h1 {
-    font-size: 7vw;
-  }
-
-}
-
-@media screen and (max-width: 600px) {
-
-  .landing-col-3 .circle h1 {
-    top: 25%;
-  }
-
-  md-toolbar > img {
-    margin: 3px !important;
-  }
-
-}
-
-.lets-go-btn {
-  float: right;
-  margin-right: 50px;
-  margin-bottom: 20px;
-}
-
 
 
