--- a/src/client/admin/components/wrapper/wrapper.html
+++ b/src/client/admin/components/wrapper/wrapper.html
@@ -15,11 +15,6 @@
     <p ng-show="wrapperCtrl.username">Logged in as: {{ wrapperCtrl.username }}</p>
 
     <p flex 
-               ng-show="wrapperCtrl.userData && wrapperCtrl.userData.username"
-               ng-click="logOut()">
-      Log Out
-    </p>
-    <p flex 
                ng-show="!wrapperCtrl.userData || !wrapperCtrl.userData.username"
                ng-click="show('logIn')">
       Log In
@@ -29,6 +24,21 @@
                ng-show="!wrapperCtrl.userData || !wrapperCtrl.userData.username"
                ng-click="show('createAccount')">
       Sign Up
+    </p>
+    <p flex 
+               ng-show="wrapperCtrl.userData && wrapperCtrl.userData.username"
+               ng-click="show('newNote')">
+      New Note
+    </p>
+    <p flex 
+               ng-show="wrapperCtrl.userData && wrapperCtrl.userData.username"
+               ng-click="show('viewNotes')">
+      My Notes
+    </p>
+    <p flex 
+               ng-show="wrapperCtrl.userData && wrapperCtrl.userData.username"
+               ng-click="logOut()">
+      Log Out
     </p>
 
   </md-content>
