--- a/src/client/admin/components/wrapper/wrapper.html
+++ b/src/client/admin/components/wrapper/wrapper.html
@@ -46,7 +46,12 @@
 
 <div class="body-wrapper" flex="100" layout="row" layout-wrap layout-padding>
 
-
+  <div class="bottom-left-cta">
+    <h1>Stop by for a minute.</h1>
+    <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram & expose yourself to instant gratification by snapping a few candid shots of your own.</p>
+    <button class="yes-btn" ng-click="wrapperCtrl.handleYesClick()">Yes, I'm Coming</button>
+    <button class="no-btn" ng-click="wrapperCtrl.handleNoClick()">No, Not This Time</button>
+  </div>
 
 </div>
 
