HTML/CSS top three polaroids - 1280px screen width only

--- a/src/client/admin/components/wrapper/wrapper.html
+++ b/src/client/admin/components/wrapper/wrapper.html
@@ -44,7 +44,24 @@
   </md-content>
 </md-sidenav>
 
-<div class="body-wrapper" flex="100" layout="row" layout-wrap layout-padding>
+<div class="body-wrapper" flex="none">
+  <div class="img-wrapper left">
+    <div class="top-left-polaroid">
+      <h1>Polaroid</h1>
+      <h2>Celebration</h2>
+    </div>
+  </div>
+
+  <div class="img-wrapper center">
+    <div class="middle-polaroid">
+      <p>Book Signing & Cocktail Hour of Instant — The Story of Polaroid by author Christopher Bonanos.</p>
+    </div>
+  </div>
+
+  <div class="img-wrapper right">
+    <div class="top-right-polaroid">
+    </div>
+  </div>
 
   <div class="bottom-left-cta">
     <h1>Stop by for a minute.</h1>
@@ -52,7 +69,6 @@
     <button class="yes-btn" ng-click="wrapperCtrl.handleYesClick()">Yes, I'm Coming</button>
     <button class="no-btn" ng-click="wrapperCtrl.handleNoClick()">No, Not This Time</button>
   </div>
-
 </div>
 
 
