--- a/.adminTmp/styles/styles.css
+++ b/.adminTmp/styles/styles.css
@@ -117,7 +117,7 @@ md-sidenav p {
   color: #fff; }
 
 md-toolbar {
-  background-color: #fff !important; }
+  background-color: transparent !important; }
   md-toolbar md-menu {
     margin-top: 7px !important; }
   md-toolbar .md-toolbar-tools {
@@ -147,7 +147,7 @@ md-toolbar {
     md-toolbar .md-toolbar-tools .right-nav {
       margin-right: -20px; }
       md-toolbar .md-toolbar-tools .right-nav i {
-        color: #000;
+        color: #fff;
         float: right; }
       @media screen and (max-width: 600px) {
         md-toolbar .md-toolbar-tools .right-nav {
@@ -219,40 +219,92 @@ button i {
   left: 0;
   background: url(https://d3itspfsh9cmg0.cloudfront.net/wood-bg.png) no-repeat center center fixed;
   background-size: cover; }
-
-.bottom-left-cta {
-  padding: 30px;
-  background-color: #fff;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 800px;
-  background: url(https://d3itspfsh9cmg0.cloudfront.net/white-texture-bg.png) no-repeat;
-  background-size: cover; }
-  .bottom-left-cta h1 {
-    margin: 0; }
-  .bottom-left-cta button {
-    border: none;
-    padding: 10px 20px;
-    margin: 10px 20px 10px 0;
-    color: #fff;
-    text-transform: uppercase;
-    -webkit-transition: background-color 200ms ease-out;
-    transition: background-color 200ms ease-out; }
-    .bottom-left-cta button.yes-btn {
-      background-color: #ff9933; }
-      .bottom-left-cta button.yes-btn:hover {
-        background-color: #cc6600; }
-    .bottom-left-cta button.no-btn {
-      background-color: #333333; }
-      .bottom-left-cta button.no-btn:hover {
-        background-color: #666666; }
-  @media screen and (max-width: 465px) {
-    .bottom-left-cta button {
+  .body-wrapper .inner-wrapper {
+    max-width: 1280px;
+    margin: auto;
+    position: relative; }
+  .body-wrapper .img-wrapper {
+    position: relative;
+    float: left;
+    width: 33%;
+    padding: 20px;
+    box-sizing: border-box; }
+    .body-wrapper .img-wrapper.left {
+      padding-right: 5px;
+      padding-left: 60px; }
+    .body-wrapper .img-wrapper.center {
+      padding-right: 73px;
+      padding-top: 70px;
+      margin-left: -52px;
+      z-index: -1; }
+    .body-wrapper .img-wrapper.right {
+      padding-right: 46px;
+      padding-top: 45px;
+      margin-left: -20px; }
+    .body-wrapper .img-wrapper > div {
+      background-size: 100% !important;
       width: 100%;
-      margin: 10px 0; } }
-
-@media screen and (max-width: 800px) {
-  .bottom-left-cta {
-    width: inherit;
-    rigth: 0; } }
+      padding-bottom: 107%;
+      box-sizing: border-box; }
+    .body-wrapper .img-wrapper .top-left-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/top-left-polaroid.png) no-repeat;
+      padding-top: 82px; }
+      .body-wrapper .img-wrapper .top-left-polaroid h1, .body-wrapper .img-wrapper .top-left-polaroid h2 {
+        color: #fff;
+        text-align: center;
+        margin: 0;
+        text-shadow: 4px 4px #000; }
+      .body-wrapper .img-wrapper .top-left-polaroid h1 {
+        font-size: 60px;
+        line-height: 60px; }
+      .body-wrapper .img-wrapper .top-left-polaroid h2 {
+        font-size: 44px;
+        line-height: 44px; }
+    .body-wrapper .img-wrapper .middle-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/middle-polaroid.png) no-repeat;
+      position: relative; }
+      .body-wrapper .img-wrapper .middle-polaroid p {
+        font-size: 15px;
+        color: #fff;
+        position: absolute;
+        bottom: 66px;
+        padding: 0 30px;
+        font-weight: bold;
+        text-shadow: 2px 2px #000; }
+    .body-wrapper .img-wrapper .top-right-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/top-right-polaroid.png) no-repeat; }
+  .body-wrapper .bottom-left-cta {
+    padding: 22px 30px 5px 30px;
+    background-color: #fff;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 800px;
+    background: url(https://d3itspfsh9cmg0.cloudfront.net/bottom-left-background.png) no-repeat;
+    background-size: cover; }
+    .body-wrapper .bottom-left-cta h1 {
+      margin: 0; }
+    .body-wrapper .bottom-left-cta button {
+      border: none;
+      padding: 10px 20px;
+      margin: 10px 20px 10px 0;
+      color: #fff;
+      text-transform: uppercase;
+      -webkit-transition: background-color 200ms ease-out;
+      transition: background-color 200ms ease-out; }
+      .body-wrapper .bottom-left-cta button.yes-btn {
+        background-color: #ff9933; }
+        .body-wrapper .bottom-left-cta button.yes-btn:hover {
+          background-color: #cc6600; }
+      .body-wrapper .bottom-left-cta button.no-btn {
+        background-color: #333333; }
+        .body-wrapper .bottom-left-cta button.no-btn:hover {
+          background-color: #666666; }
+    @media screen and (max-width: 465px) {
+      .body-wrapper .bottom-left-cta button {
+        width: 100%;
+        margin: 10px 0; } }
+  @media screen and (max-width: 800px) {
+    .body-wrapper .bottom-left-cta {
+      width: inherit;
+      rigth: 0; } }
