--- a/src/client/admin/components/wrapper/wrapper.scss
+++ b/src/client/admin/components/wrapper/wrapper.scss
@@ -23,7 +23,7 @@ md-sidenav {
 }
 
 md-toolbar {
-  background-color: #fff !important;
+  background-color: transparent !important;
 
   md-menu {
     margin-top: 7px !important;
@@ -65,7 +65,7 @@ md-toolbar {
       margin-right: -20px;
 
       i {
-        color: #000;
+        color: #fff;
         float: right;
       }
       
@@ -174,65 +174,156 @@ button i {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
 
-.bottom-left-cta {
-  padding: 30px;
-  background-color: #fff;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 800px;
-  background: url(https://d3itspfsh9cmg0.cloudfront.net/white-texture-bg.png) no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  h1 {
-    margin: 0;
+  .inner-wrapper {
+    max-width: 1280px;
+    margin: auto;
+    position: relative;
   }
 
-  button {
-    border: none;
-    padding: 10px 20px;
-    margin: 10px 20px 10px 0;
-    color: #fff;
-    text-transform: uppercase;
-    -webkit-transition: background-color 200ms ease-out;
-    -moz-transition: background-color 200ms ease-out;
-    -o-transition: background-color 200ms ease-out;
-    transition: background-color 200ms ease-out;
+  .img-wrapper {
+    position: relative;
+    float: left;
+    width: 33%;
+    padding: 20px;
+    box-sizing: border-box;
 
-    &.yes-btn {
-      background-color: #ff9933;
-
-      &:hover {
-        background-color: #cc6600;
-      }
+    &.left {
+      padding-right: 5px;
+      padding-left: 60px;
     }
 
-    &.no-btn {
-      background-color: #333333;
-
-      &:hover {
-        background-color: #666666;
-      }
+    &.center {
+      padding-right: 73px;
+      padding-top: 70px;
+      margin-left: -52px;
+      z-index: -1;
     }
-  }
 
-  @media screen and (max-width: 465px) {
-    button {
+    &.right {
+      padding-right: 46px;
+      padding-top: 45px;
+      margin-left: -20px;
+    }
+
+    > div {
+      -webkit-background-size: 100% !important;
+      -moz-background-size: 100% !important;
+      -o-background-size: 100% !important;
+      background-size: 100% !important;
       width: 100%;
-      margin: 10px 0;
+      padding-bottom: 107%;
+      box-sizing: border-box;
+    }
+
+    .top-left-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/top-left-polaroid.png) no-repeat;
+      padding-top: 82px;
+
+      h1, h2 {
+        color: #fff;
+        text-align: center;
+        margin: 0;
+        text-shadow: 4px 4px #000;
+      }
+
+      h1 {
+        font-size: 60px;
+        line-height: 60px;
+      }
+
+      h2 {
+        font-size: 44px;
+        line-height: 44px;
+      }
+    }
+
+    .middle-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/middle-polaroid.png) no-repeat;
+      position: relative;  
+
+      p {
+        font-size: 15px;
+        color: #fff;
+        position: absolute;
+        bottom: 66px;
+        padding: 0 30px;
+        font-weight: bold;
+        text-shadow: 2px 2px #000;
+      }
+    }
+
+    .top-right-polaroid {
+      background: url(https://d3itspfsh9cmg0.cloudfront.net/top-right-polaroid.png) no-repeat;
+    }
+
+    .edge-polaroid {
+
+    }
+
+    .high-heel {
+
     }
   }
-}
 
-@media screen and (max-width: 800px) {
   .bottom-left-cta {
-    width: inherit;
-    rigth: 0;
+    padding: 22px 30px 5px 30px;
+    background-color: #fff;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 800px;
+    background: url(https://d3itspfsh9cmg0.cloudfront.net/bottom-left-background.png) no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    h1 {
+      margin: 0;
+    }
+
+    button {
+      border: none;
+      padding: 10px 20px;
+      margin: 10px 20px 10px 0;
+      color: #fff;
+      text-transform: uppercase;
+      -webkit-transition: background-color 200ms ease-out;
+      -moz-transition: background-color 200ms ease-out;
+      -o-transition: background-color 200ms ease-out;
+      transition: background-color 200ms ease-out;
+
+      &.yes-btn {
+        background-color: #ff9933;
+
+        &:hover {
+          background-color: #cc6600;
+        }
+      }
+
+      &.no-btn {
+        background-color: #333333;
+
+        &:hover {
+          background-color: #666666;
+        }
+      }
+    }
+
+    @media screen and (max-width: 465px) {
+      button {
+        width: 100%;
+        margin: 10px 0;
+      }
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    .bottom-left-cta {
+      width: inherit;
+      rigth: 0;
+    }
   }
 }
 
